2002-07-24  Mark Mitchell  <mark@codesourcery.com>

	* NEWS: Mention ProcessTarget.
	* qm/qm.sh (QM_BUILD): Do not override an existing value.
	* qm/test/cmdline.py (QMTest.GetTargets): Adjust handling of
	concurrency values.
	(QMTest.__ExecuteRemote): Likewise.
	* qm/test/execution_engine.py (ExecutionEngine.AddInputHandler):
	New method.
	(ExecutionEngine._CheckForResponse): Dispatch to input handlers if
	appropriate.
	* qm/test/target.py (Target.__init__): Remove concurrency
	parameter.
	(Target.GetConcurrency): Likewise.
	* qm/test/classes/classes.qmc: Add ProcessTarget..
	* qm/test/classes/process_taret.py: New file.
	* qm/test/classes/rsh_target.py: Build atop ProcessTarget
	* qm/test/doc/reference.xml: Describe ProcessTarget.
	* qm/test/share/dtds/target.dtd: Remove concurrency field.
	
2002-07-23  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in (lib-install): Improve portability.

2002-07-09  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/thread_target.py: Remove tabs.
	* qm/common.py (lock): Import it.
	(__load_module_lock): New variable.
	(load_module): Use it to enforce thread safety when loading 
	modules.
	* qm/lock.py: New file.
	* qm/test/execution_engine.py (ExecutionEngine.__init__): Do not
	initialize busy_targets.
	(ExecutionEngine.Run): Add additional trace output.
	(ExecutionEngine._RunTests): Do not use busy_targets.  Use the
	length of idle_targets to detect deadlock.

2002-07-04  Mark Mitchell  <mark@codesourcery.com>

	* NEWS: Mention qmtest run --rerun.
	* qm/test/base.py (get_class_arguments): Remove Python 1.5.2
	compatibility code.
	* qm/test/cmdline.py (QMTest.rerun_option_spec): New class
	variable.
	(QMTest.commands_spec): Use it.
	(QMTest.__ExecuteSummarize): Use __GetExpectedOutcomes.
	(QMTest.__ExecuteRun): Likewise.  Use __FilterTestsToRun.
	(QMTest.__GetExpectedOutcomes): New method.
	(QMTest.__FilterTestsToRun): Likewise.
	
2002-06-30  Mark Mitchell  <mark@codesourcery.com>
