@@ -1,3 +1,9 @@
+2002-07-31  Mark Mitchell  <mark@codesourcery.com>
+
+	* NEWS: Discuss requirement that classes be listed in classes.qmc.
+	* qm/test/share/doc/reference.xml: Update description of extension
+	classes.
+	
 2002-07-24  Mark Mitchell  <mark@codesourcery.com>
 
 	* NEWS: Mention ProcessTarget.
